--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
         "框架",
         "源码"
     ],
-    "homepage": "http://git.xbwq.com.cn/huangdingbo/yii2",
+    "homepage": "https://github.com/huangdingbo/yii2",
     "type": "library",
     "license": "BSD-3-Clause",
     "authors": [
